--- a/sass/misc/_variables.scss
+++ b/sass/misc/_variables.scss
@@ -3,6 +3,9 @@ $primary: #120D31;
 $secondary: #FF5376;
 $alternative: #302F4D;
 $text-color: #2B2B2B;
+$adventure: rgb(108, 228, 108);
+$football: rgb(87, 70, 243);
+$action: rgb(224, 54, 54);
 
 /* Spacings */
 $spacing-large: 6rem;
